# itu-sdse-project

./: .gitignore  Dockerfile  README.md  data.dvc  go.work  main.ipynb  pyproject.toml  requirements.txt  run_pipeline_locally.sh  start_container.sh  training.py
.dvc/: .gitignore  config
.github/workflows/: ci.yml  test_action.yml  train-model.yml  train.yml
ci/: go.mod  go.sum  main.go
dagger/: go.mod  go.sum  main.go
data/raw/: raw_data.csv.dvc
docs/: diagrams.excalidraw
itu-sdse-project/: Makefile  README.md  pyproject.toml  requirements.txt
itu-sdse-project/docs/: mkdocs.yml
itu-sdse-project/docs/docs/: index.md
mlops_project/: __init__.py  deploy.py  model_select.py  preprocessing.py  training.py
mlops_project/modeling/: predict.py  train.py
model/: model.pkl
notebooks/: 0.01_Data_exploration.ipynb  data_generating_process.py  datacleaning_example.ipynb  main.ipynb  project_stage_1_functions.ipynb  requirements.txt
notebooks/notebooks_to_keep_for_later/: 0.01_Data_exploration.ipynb
notebooks/original_files/: model_inference.py
source/: dataset.py  features.py  plots.py  preprocessing.py
tests/: conftest.py  test_2_training.py  test_3_model_select.py  test_4_deploy.py  test_model_select.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_unit.py  test_training.py
tests/integration/: test_pipeline.py  test_pipelinefast.py
tests/unit/: test_deploy.py  test_deployimport.py  test_modelselect.py  test_modelselectimport.py  test_preprocessingimport.py  test_preprocessingmock.py  test_trainingimport.py  test_trainingruns.py
