[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_project"
version = "0.0.1"
description = "sdse"
authors = [
  { name = "Git Gut" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

dependencies = [
  "loguru",
  "mkdocs",
  "pip",
  "python-dotenv",
  "ruff",
  "tqdm",
  "typer",
  "pandas==2.2.3",
  "numpy",
  "matplotlib",
  "seaborn",
  "plotly.express",
  "scikit-learn==1.5.2",
  "mlflow==2.18.0",
  "xgboost==2.1.1",
  "pytest>=9.0.1",
]

[tool.ruff]
line-length = 99
src = ["mlops_project"]
include = ["pyproject.toml", "mlops_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_project"]
force-sort-within-sections = true

